--- a/frontend/css-style/shared/general.css
+++ b/frontend/css-style/shared/general.css
@@ -21,7 +21,7 @@ a {
   color: inherit;    
 }
 
-.layout,
+/* .layout,
 .content,
 .summary-inner-grid,
 .transactions-grid,
@@ -33,4 +33,4 @@ a {
 .expense-grid
  {
   min-width: 0;
-}
+} */
