--- a/frontend/css-style/shared/header.css
+++ b/frontend/css-style/shared/header.css
@@ -6,8 +6,8 @@
   top: 0;
   background-color: white;
   background: #fff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
   padding: 1.35rem;
+  z-index: 1;
 }
 
 .menu-box {
